이메일, 패스워드 에러메세지 기능

--- a/signin.html
+++ b/signin.html
@@ -17,10 +17,16 @@
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        <img
+          class="header-logo"
+          src="./images/logo.svg"
+          alt="홈으로 연결된 Linkbrary 로고"
+        />
       </a>
       <p class="header-message">
-        회원이 아니신가요?<a class="header-link" href="signup.html">회원 가입하기</a>
+        회원이 아니신가요?<a class="header-link" href="signup.html"
+          >회원 가입하기</a
+        >
       </p>
     </header>
     <div class="sign-box">
@@ -28,11 +34,13 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input" type="email" />
+            <div class="sign-input--error-container"></div>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
             <input class="sign-input" type="password" />
+            <div class="sign-input--error-container"></div>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
@@ -52,5 +60,6 @@
         </div>
       </div>
     </div>
+    <script src="./src/index.js"></script>
   </body>
 </html>
