--- a/signup.html
+++ b/signup.html
@@ -17,10 +17,16 @@
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        <img
+          class="header-logo"
+          src="./images/logo.svg"
+          alt="홈으로 연결된 Linkbrary 로고"
+        />
       </a>
       <p class="header-message">
-        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+        이미 회원이신가요?<a class="header-link" href="signin.html"
+          >로그인 하기</a
+        >
       </p>
     </header>
     <div class="sign-box">
@@ -28,7 +34,7 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input" type="email" />
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
@@ -59,5 +65,6 @@
         </div>
       </div>
     </div>
+    <script src="./src/index.js"></script>
   </body>
 </html>
