--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./src/landing.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
   </head>
   <body>
     <nav>
       <div class="gnb">
-        <a href="index.html">
+        <a href="./index.html">
           <img
             class="logo"
-            src="./images/logo.svg"
+            src="./assets/images/logo.svg"
             alt="홈으로 연결된 Linkbrary 로고"
           />
         </a>
-        <a class="cta cta-short" href="signin.html">
+        <a class="cta cta-short" href="./login/signin.html">
           <span>로그인</span>
         </a>
       </div>
@@ -61,11 +62,11 @@
           <br />
           쉽게 저장하고 관리해 보세요
         </h1>
-        <a class="cta cta-long" href="signup.html">
+        <a class="cta cta-long" href="./signup/signup.html">
           <span>링크 추가하기</span>
         </a>
         <img
-          src="./images/hero.png"
+          src="./assets/images/hero.png"
           class="hero-image"
           alt="Linkbrary 서비스 소개"
         />
@@ -85,7 +86,7 @@
           한 공간에 저장하세요.
         </p>
         <img
-          src="./images/image1.png"
+          src="./assets/images/image1.png"
           class="content-image"
           alt="링크의 내용이 담긴 카드들"
         />
@@ -101,7 +102,7 @@
           다양하게 활용할 수 있습니다.
         </p>
         <img
-          src="./images/image2.png"
+          src="./assets/images/image2.png"
           class="content-image"
           alt="폴더 이름 변경 기능"
         />
@@ -117,7 +118,7 @@
           쉽고 빠르게 링크를 공유해 보세요.
         </p>
         <img
-          src="./images/image3.png"
+          src="./assets/images/image3.png"
           class="content-image"
           alt="폴더 공유 기능"
         />
@@ -130,7 +131,7 @@
         </h2>
         <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
         <img
-          src="./images/image4.png"
+          src="./assets/images/image4.png"
           class="content-image"
           alt="링크 검색 기능"
         />
@@ -150,7 +151,7 @@
             rel="noopener noreferrer"
           >
             <img
-              src="./images/facebook.svg"
+              src="./assets/images/facebook.svg"
               alt="facebook 홈페이지로 연결된 facebook 로고"
             />
           </a>
@@ -160,7 +161,7 @@
             rel="noopener noreferrer"
           >
             <img
-              src="./images/twitter.svg"
+              src="./assets/images/twitter.svg"
               alt="twitter 홈페이지로 연결된 twitter 로고"
             />
           </a>
@@ -170,7 +171,7 @@
             rel="noopener noreferrer"
           >
             <img
-              src="./images/youtube.svg"
+              src="./assets/images/youtube.svg"
               alt="youtube 홈페이지로 연결된 youtube 로고"
             />
           </a>
@@ -180,7 +181,7 @@
             rel="noopener noreferrer"
           >
             <img
-              src="./images/instagram.svg"
+              src="./assets/images/instagram.svg"
               alt="instagram 홈페이지로 연결된 instagram 로고"
             />
           </a>
