--- a/login/signin.html
+++ b/login/signin.html
@@ -12,19 +12,20 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./src/sign.css" />
+    <link rel="stylesheet" href="./sign.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
     <header>
-      <a class="logo-link" href="index.html">
+      <a class="logo-link" href="../index.html">
         <img
           class="header-logo"
-          src="./images/logo.svg"
+          src="../assets/images/logo.svg"
           alt="홈으로 연결된 Linkbrary 로고"
         />
       </a>
       <p class="header-message">
-        회원이 아니신가요?<a class="header-link" href="signup.html"
+        회원이 아니신가요?<a class="header-link" href="../signup/signup.html"
           >회원 가입하기</a
         >
       </p>
@@ -34,16 +35,16 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" type="email" />
+            <input class="sign-input-email" type="email" />
             <div class="sign-input--error-container"></div>
           </div>
 
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input-password" type="password" />
             <div class="sign-input--error-container"></div>
             <button class="eye-button" type="button">
-              <img src="./images/eye-off.svg" />
+              <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
         </div>
@@ -53,10 +54,10 @@
         <span class="sns-text">소셜 로그인</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="./images/google.png" />
+            <img src="../assets/images/google.png" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="./images/kakao.svg" />
+            <img src="../assets/images/kakao.svg" />
           </a>
         </div>
       </div>
