--- a/signup/signup.html
+++ b/signup/signup.html
@@ -12,19 +12,21 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./src/sign.css" />
+
+    <link rel="stylesheet" href="../login/sign.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
     <header>
-      <a class="logo-link" href="index.html">
+      <a class="logo-link" href="../index.html">
         <img
           class="header-logo"
-          src="./images/logo.svg"
+          src="../assets/images/logo.svg"
           alt="홈으로 연결된 Linkbrary 로고"
         />
       </a>
       <p class="header-message">
-        이미 회원이신가요?<a class="header-link" href="signin.html"
+        이미 회원이신가요?<a class="header-link" href="../login/signin.html"
           >로그인 하기</a
         >
       </p>
@@ -34,20 +36,20 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" type="email" />
+            <input class="sign-input-email" type="email" />
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input-password" type="password" />
             <button class="eye-button" type="button">
-              <img src="./images/eye-off.svg" />
+              <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input-password" type="password" />
             <button class="eye-button" type="button">
-              <img src="./images/eye-off.svg" />
+              <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
         </div>
@@ -57,14 +59,13 @@
         <span class="sns-text">다른 방식으로 가입하기</span>
         <div class="sns-links">
           <a class="sns-link google-link" href="https://www.google.com/">
-            <img src="./images/google.png" />
+            <img src="../assets/images/google.png" />
           </a>
           <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
-            <img src="./images/kakao.svg" />
+            <img src="../assets/images/kakao.svg" />
           </a>
         </div>
       </div>
     </div>
-    <script src="./src/index.js"></script>
   </body>
 </html>
