--- a/index.html
+++ b/index.html
@@ -39,35 +39,34 @@
     <link rel="stylesheet" href="./styles/global.css" />
   </head>
   <body>
-    <nav>
-      <div class="gnb">
-        <a href="./index.html">
-          <img
-            class="logo"
-            src="./assets/images/logo.svg"
-            alt="홈으로 연결된 Linkbrary 로고"
-          />
-        </a>
-        <a class="cta cta-short" href="./login/signin.html">
-          <span>로그인</span>
-        </a>
-      </div>
+    <nav class="gnb">
+      <a href="./index.html">
+        <img
+          class="logo"
+          src="./assets/images/logo.svg"
+          alt="홈으로 연결된 Linkbrary 로고"
+        />
+      </a>
+      <a class="cta cta-short" href="./login/signin.html">
+        <span>로그인</span>
+      </a>
     </nav>
+
     <header>
-      <div class="hero-header">
-        <h1 class="slogan">
-          <span class="slogan-gradient background-clip-text">
+      <div class="hero-container">
+        <h1 class="hero-container__title">
+          <span class="title-gradient background-clip-text">
             세상의 모든 정보</span
           >를
           <br />
           쉽게 저장하고 관리해 보세요
         </h1>
-        <a class="cta cta-long" href="./signup/signup.html">
+        <a class="cta cta--long" href="./signup/signup.html">
           <span>링크 추가하기</span>
         </a>
         <img
           src="./assets/images/hero.png"
-          class="hero-image"
+          class="hero-container__image"
           alt="Linkbrary 서비스 소개"
         />
       </div>
