로그인, 회원가입 HTML, CSS 클래스네임 수정

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         />
       </div>
     </header>
-    <article>
+    <main>
       <section>
         <h2 class="title">
           <span class="title-1-gradient background-clip-text"> 원하는 링크</span
@@ -135,7 +135,7 @@
           alt="링크 검색 기능"
         />
       </section>
-    </article>
+    </main>
     <footer>
       <div class="footer-box">
         <span class="copyright">©codeit - 2023</span>
