--- a/signup/signup.html
+++ b/signup/signup.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
 
-    <link rel="stylesheet" href="../login/sign.css" />
+    <link rel="stylesheet" href="../login/signin.css" />
     <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
@@ -31,24 +31,24 @@
         >
       </p>
     </header>
-    <div class="sign-box">
+    <div class="sign-container">
       <form class="sign-form">
-        <div class="sign-inputs">
-          <div class="sign-input-box">
-            <label class="sign-input-label">이메일</label>
-            <input class="sign-input-email" type="email" />
+        <div class="sign-form__body">
+          <div class="form-group">
+            <label class="form-group__label">이메일</label>
+            <input class="form-group__email" type="email" />
           </div>
-          <div class="sign-input-box sign-password">
-            <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input-password" type="password" />
-            <button class="eye-button" type="button">
+          <div class="form-group sign-password">
+            <label class="form-group__label">비밀번호</label>
+            <input class="form-group__password" type="password" />
+            <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
-          <div class="sign-input-box sign-password">
-            <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input-password" type="password" />
-            <button class="eye-button" type="button">
+          <div class="form-group sign-password">
+            <label class="form-group__label">비밀번호 확인</label>
+            <input class="form-group__password" type="password" />
+            <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
