--- a/login/signin.html
+++ b/login/signin.html
@@ -12,7 +12,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./sign.css" />
+    <link rel="stylesheet" href="./signin.css" />
     <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
@@ -30,20 +30,20 @@
         >
       </p>
     </header>
-    <div class="sign-box">
+    <div class="sign-container">
       <form class="sign-form">
-        <div class="sign-inputs">
-          <div class="sign-input-box">
-            <label class="sign-input-label">이메일</label>
-            <input class="sign-input-email" type="email" />
-            <div class="sign-input--error-container"></div>
+        <div class="sign-form__body">
+          <div class="form-group">
+            <label class="form-group__label">이메일</label>
+            <input class="form-group__email" type="email" />
+            <div class="form-group__error-container"></div>
           </div>
 
-          <div class="sign-input-box sign-password">
-            <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input-password" type="password" />
-            <div class="sign-input--error-container"></div>
-            <button class="eye-button" type="button">
+          <div class="form-group sign-password">
+            <label class="form-group__label">비밀번호</label>
+            <input class="form-group__password" type="password" />
+            <div class="form-group__error-container"></div>
+            <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
