회원가입, 로그인 눈 position 수정

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -38,14 +38,14 @@
             <label class="form-group__label">이메일</label>
             <input class="form-group__email" type="email" />
           </div>
-          <div class="form-group sign-password">
+          <div class="form-group password-container">
             <label class="form-group__label">비밀번호</label>
             <input class="form-group__password" type="password" />
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
           </div>
-          <div class="form-group sign-password">
+          <div class="form-group password-container">
             <label class="form-group__label">비밀번호 확인</label>
             <input class="form-group__password" type="password" />
             <button class="form-group__eye-button" type="button">
