--- a/login/signin.html
+++ b/login/signin.html
@@ -39,13 +39,13 @@
             <div class="form-group__error-container"></div>
           </div>
 
-          <div class="form-group sign-password">
+          <div class="form-group password-container">
             <label class="form-group__label">비밀번호</label>
             <input class="form-group__password" type="password" />
-            <div class="form-group__error-container"></div>
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
+            <div class="form-group__error-container"></div>
           </div>
         </div>
         <button class="cta" type="submit">로그인</button>
