--- a/login/signin.html
+++ b/login/signin.html
@@ -36,7 +36,7 @@
           <div class="form-group">
             <label class="form-group__label">이메일</label>
             <input class="form-group__email" type="email" />
-            <div class="form-group__error-container"></div>
+            <p class="form-group__error-container"></p>
           </div>
 
           <div class="form-group password-container">
@@ -45,7 +45,7 @@
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
-            <div class="form-group__error-container"></div>
+            <p class="form-group__error-container"></p>
           </div>
         </div>
         <button class="cta" type="submit">로그인</button>
