(signin.js) dom과 로직 분리

--- a/login/signin.html
+++ b/login/signin.html
@@ -36,7 +36,7 @@
           <div class="form-group">
             <label class="form-group__label">이메일</label>
             <input class="form-group__email" type="email" />
-            <p class="form-group__error-container"></p>
+            <p class="form-group__error-message--email"></p>
           </div>
 
           <div class="form-group password-container">
@@ -45,7 +45,7 @@
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
-            <p class="form-group__error-container"></p>
+            <p class="form-group__error-message--password"></p>
           </div>
         </div>
         <button class="cta" type="submit">로그인</button>
@@ -62,6 +62,6 @@
         </div>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./signin.js"></script>
   </body>
 </html>
