--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="section-01">
             <h2><span class="text-gradient">세상의 모든 정보를</span><br>
                 쉽게 저장하고 관리해 보세요</h2>
-            <button class="btn-form01 min-width-350" type="button">링크 추가하기</button>
+            <button class="btn-form01" type="button">링크 추가하기</button>
         </section>
         <section class="section-02">
             <div class="wrap">
@@ -117,7 +117,5 @@
             </li>
         </ul>
     </footer>
-    <script src="./js/main.js"></script>
-    <script src="./js/common.js"></script>
 </body>
 </html>
