--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/auth-page-style.css">
+    <link rel="stylesheet" href="scss/pages/_auth-page.scss">
 </head>
 
 <body>
@@ -15,10 +14,10 @@
         <div class="sign">
             <div class="sign-top">
                 <h1>
-                    <a href="">
+                    <a href="index.html">
                         <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
                     </a>
-                    Linkbrary
+                    <span class="blind">Linkbrary</span>
                 </h1>
                 <div class="join">
                     <span>회원이 아니신가요?</span>
