--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -27,7 +27,7 @@
             <form action="signin.html" method="post" class="sign-form">
                 <div class="input-label">
                     <label for="username">이메일</label>
-                    <input type="email" id="username" name="username" required class="sign-input">
+                    <input type="email" id="user-email" name="user-email" required class="sign-input">
                 </div>
                 <div class="input-label">
                     <label for="password">비밀번호</label>
