chore: Change simple codes for js apply

--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -26,7 +26,7 @@
             </div>
             <form action="signin.html" method="post" class="sign-form">
                 <div class="input-label">
-                    <label for="username">이메일</label>
+                    <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input">
                 </div>
                 <div class="input-label">
@@ -55,6 +55,7 @@
             </div>
         </div>
     </main>
+    <script src="js/auth.js"></script>
 </body>
 
 </html>
