--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -26,7 +26,7 @@
             </div>
             <form action="signin.html" method="post" class="sign-form">
                 <div class="input-label">
-                    <label for="username">이메일</label>
+                    <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input">
                 </div>
                 <div class="input-label">
@@ -45,9 +45,6 @@
                         <button class="eye-btn">
                             <img src="img/eye-on.svg" alt="" class="eye-on">
                         </button>
-                        <div class="incorrect-password">
-                            비밀번호가 다릅니다
-                        </div>
                     </div>
                 </div>
                 <button class="btn login-btn">회원가입</button>
