--- a/4th_week_mission/signin.html
+++ b/4th_week_mission/signin.html
@@ -25,17 +25,19 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input" name="email" id="email" />
+            <p class="error_msg" id="email_error"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input" name="password" id="password"/>
+            <p class="error_msg" id="pwd_error"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
         </div>
-        <button class="cta" type="submit">로그인</button>
+        <button class="cta" type="button">로그인</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">소셜 로그인</span>
@@ -49,5 +51,6 @@
         </div>
       </div>
     </div>
+    <script src="signin.js"></script>
   </body>
 </html>
