--- a/4th_week_mission/signin.html
+++ b/4th_week_mission/signin.html
@@ -30,11 +30,9 @@
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" name="password" id="password"/>
+            <input class="sign-input" type = "password" name="password" id="password"/>
             <p class="error_msg" id="pwd_error"></p>
-            <button class="eye-button" type="button">
-              <img src="./images/eye-off.svg" />
-            </button>
+            <button class="eye-button" type="button" id="showPassword"></button>
           </div>
         </div>
         <button class="cta" type="button">로그인</button>
