feat: Add passwordCheck Eventhandler

--- a/4th_week_mission/signup.html
+++ b/4th_week_mission/signup.html
@@ -38,10 +38,10 @@
             <label class="sign-input-label">비밀번호 확인</label>
             <input class="sign-input" type = "password" name="passwordRepeat" id="passwordRepeat" />
             <p class="error_msg" id="pwdCheckerError"></p>
-            <button class="eye-button" type="button" id="showPassword"></button>
+            <button class="eye-button" type="button" id="showPassword2"></button>
           </div>
         </div>
-        <button class="cta" type="submit">회원가입</button>
+        <button class="cta" type="button">회원가입</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">다른 방식으로 가입하기</span>
