--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,10 +41,10 @@
         <div class="social-text">다른 방식으로 가입하기</div>
         <div class="social-link">
           <a href="https://www.google.com/"
-            ><img src="img/google.svg" alt=""
+            ><img src="img/google.svg" alt="Google icon"
           /></a>
           <a href="https://www.kakaocorp.com/page/"
-            ><img src="img/kakao.svg" alt=""
+            ><img src="img/kakao.svg" alt="Kakao icon"
           /></a>
         </div>
       </div>
