--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </main>
-    <script src="js/auth.js"></script>
+    <script type="module" src="js/auth.js"></script>
 </body>
 
 </html>
