Fix week3 signin, signup page

--- a/signup.html
+++ b/signup.html
@@ -26,14 +26,14 @@
           </div>
           <div class="sign-input-box box-password">
             <label for="password" class="password">비밀번호</label>
-            <input id="password" name="password" type="password" />
+            <input class="password-input" name="password" type="password" />
             <button class="eye-button" type="button">
               <img src="./img/eye-off.svg" />
             </button>
           </div>
           <div class="sign-input-box box-password">
             <label for="password" class="password">비밀번호 확인</label>
-            <input id="password" name="password" type="password" />
+            <input class="password-input" name="password" type="password" />
             <button class="eye-button" type="button">
               <img src="./img/eye-off.svg" />
             </button>
