--- a/signin.html
+++ b/signin.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
-  <script defer src="js/password.js"></script>
+  <script defer src="js/validate.js"></script>
 </head>
 
 <body>
