--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
-  <script defer src="js/password.js"></script>
+  <script defer src="js/validate.js"></script>
 </head>
 
 <body>
@@ -49,10 +49,11 @@
       </div>
       <!-- form 입력 -->
       <form>
-        <div class="form__wrap">
+        <div class="form__wrap signup__form">
           <div class="form__box">
-            <label for="email" class="text__size__s">이메일</label>
-            <input type="text" id="email">
+            <label for="form__email" class="text__size__s">이메일</label>
+            <input type="text" id="form__email">
+            <p class="error__text"></p>
           </div>
           <div class="form__box pw">
             <label for="form__pw" class="text__size__s">비밀번호</label>
@@ -63,6 +64,7 @@
                 <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
             </div>
+            <p class="error__text"></p>
           </div>
           <div class="form__box pw">
             <label for="form__pw__confirm" class="text__size__s">비밀번호 확인</label>
@@ -73,7 +75,7 @@
                 <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
             </div>
-            <p id="error__pw__text" class="error__text">비밀번호가 틀렸습니다.</p>
+            <p class="error__text">asdf</p>
           </div>
           <button type="button" class="btn_sign btn__gradient__lg">회원가입</button>
         </div>
