Refactor: 패스워드 validation기능을 validate.js로 이동 및 password.js수정

--- a/signin.html
+++ b/signin.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
+  <script defer src="js/password.js"></script>
   <script defer src="js/validate.js"></script>
 </head>
 
@@ -59,7 +60,7 @@
             <label for="login__pw__input" class="text__size__s">비밀번호</label>
             <div class="form__relative">
               <input type="password" id="login__pw__input" autocomplete="off">
-              <button type="button" class="btn__pw btn__pw__off login__btn-pw">
+              <button type="button" class="btn__pw login__btn-pw">
                 <img src="img/icon/icon-eye-on.svg" alt="비밀번호 보기" class="icon__on">
                 <img src="img/icon/icon-eye-off.svg" alt="비밀번호 숨기기" class="icon__off">
               </button>
