feat: Add Icon changes and animation in pwToggleButton

--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -34,7 +34,8 @@
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
                         <button class="eye-btn">
-                            <img src="img/eye-on.svg" alt="Show Password" class="eye-on">
+                            <img src="img/eye-on.svg" alt="Show Password">
+                            <img src="img/eye-off.svg" alt="Hide Password" class="hidden">
                         </button>
                     </div>
                 </div>
