refactor: Rename .eye-btn class to .pw-toggle-btn

--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -33,7 +33,7 @@
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
-                        <button class="eye-btn">
+                        <button class="pw-toggle-btn">
                             <img src="img/eye-on.svg" alt="" class="eye-on">
                         </button>
                     </div>
@@ -42,7 +42,7 @@
                     <label for="password-check">비밀번호 확인</label>
                     <div class="pw-input">
                         <input type="password" id="password-check" name="password-check" required class="sign-input">
-                        <button class="eye-btn">
+                        <button class="pw-toggle-btn">
                             <img src="img/eye-on.svg" alt="" class="eye-on">
                         </button>
                     </div>
