--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -33,7 +33,7 @@
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
-                        <button class="eye-btn">
+                        <button class="pw-toggle-btn">
                             <img src="img/eye-on.svg" alt="Show Password">
                             <img src="img/eye-off.svg" alt="Hide Password" class="hidden">
                         </button>
