4주차 위클리 미션

--- a/html/signup.html
+++ b/html/signup.html
@@ -23,6 +23,7 @@
                     <div class="login-div input-login-form01">
                         <label for="email">이메일</label>
                         <input id="email" name="email" type="email" placeholder="codeit@codeit.com">
+                        <div class="login-caution"></div>
                     </div>
                     <div class="login-div input-login-form01">
                         <label for="password">비밀번호</label>
@@ -33,6 +34,7 @@
                                 <img src="../images/icon/eye-on.png" alt="비밀번호 보이기">
                             </button>
                         </div>
+                        <div class="login-caution"></div>
                     </div>
                     <div class="login-div input-login-form01">
                         <label for="verifyPassword">비밀번호 확인</label>
@@ -43,6 +45,7 @@
                                 <img src="../images/icon/eye-on.png" alt="비밀번호 보이기">
                             </button>
                         </div>
+                        <div class="login-caution"></div>
                     </div>
                     <button class="login-button btn-form01 width-full" type="button">회원가입</button>
                     <div class="social-login flex-box">
@@ -64,5 +67,6 @@
             </article>
         </div>
     </div>
+    <script src="../js/login.js"></script>
 </body>
 </html>
