Fix: 파일이름 변경 및 로그인 validation 기능 추가

--- a/signup.html
+++ b/signup.html
@@ -32,8 +32,8 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
-  <script defer src="js/password.js"></script>
-  <script defer src="js/validate.js"></script>
+  <script defer src="js/validation.js"></script>
+  <script defer src="js/password_toggle.js"></script>
 </head>
 
 <body>
@@ -78,7 +78,7 @@
             </div>
             <p class="error__text">asdf</p>
           </div>
-          <button type="button" class="btn_sign btn__gradient__lg">회원가입</button>
+          <button class="btn_sign btn__gradient__lg">회원가입</button>
         </div>
       </form>
       <!-- sns 가입하기 -->
