--- a/signin.html
+++ b/signin.html
@@ -33,7 +33,8 @@
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
   <script defer src="js/signin.js"></script>
-  <script defer src="js/password.js"></script>
+  <script defer src="js/validation.js"></script>
+  <script defer src="js/password_toggle.js"></script>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
         <div class="form__wrap login__form">
           <div class="form__box">
             <label for="email" class="text__size__s">이메일</label>
-            <input type="text" name="email" id="signin_email" autocomplete="off">
+            <input type="text" name="email" id="login__email" autocomplete="off">
             <p class="error__text"></p>
           </div>
           <div class="form__box pw">
