fix: 오타수정, 태그 속성 순서 변경

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       property="og:image"
       content="https://i.pinimg.com/564x/6c/2a/90/6c2a90ff6ed1cf29d00c7d6fc0dc813b.jpg"
     />
-    <meta roperty="og:url" content="https://moonwon-linkbrary.netlify.app/" />
+    <meta property="og:url" content="https://moonwon-linkbrary.netlify.app/" />
     <meta property="og:title" content="Linkbrary" />
     <meta
       property="og:description"
@@ -26,7 +26,7 @@
     <nav>
       <div class="gnb">
         <a href="index.html"><img src="img/logo.svg" alt="Linkbrary-logo" /></a>
-        <a href="signin.html" class="header-link signin">로그인</a>
+        <a class="header-link signin" href="signin.html">로그인</a>
       </div>
     </nav>
     <!--페이지의 타이틀을 담고 있는 header-->
@@ -37,11 +37,11 @@
           <br />
           쉽게 저장하고 관리해 보세요
         </h1>
-        <a href="signup.html" class="header-link add">링크 추가하기</a>
+        <a class="header-link add" href="signup.html">링크 추가하기</a>
         <img
+          class="header-img"
           src="img/header.png"
           alt="세상의 모든 정보를 관리할 수 있는 홈페이지 이미지"
-          class="header-img"
         />
       </div>
     </header>
@@ -60,16 +60,16 @@
           한 공간에 저장하세요.
         </p>
         <img
+          class="contents-img"
           src="img/contents-01.png"
           alt="링크 저장하는 이미지"
-          class="contents-img"
         />
       </section>
       <section>
         <img
+          class="contents-img"
           src="img/contents-02.png"
           alt="폴더 변경하는 이미지"
-          class="contents-img"
         />
         <h2>
           링크를 폴더로<br />
@@ -91,16 +91,16 @@
           공유해 보세요.
         </p>
         <img
+          class="contents-img"
           src="img/contents-03.png"
           alt="폴더 공유하는 이미지"
-          class="contents-img"
         />
       </section>
       <section>
         <img
+          class="contents-img"
           src="img/contents-04.png"
           alt="검색창이 보이는 이미지"
-          class="contents-img"
         />
         <h2>
           저장한 링크를<br />
@@ -119,16 +119,16 @@
         </div>
         <div class="footer-link-logo">
           <a href="https://www.facebook.com/?locale=ko_KR" target="_blank">
-            <img src="img/footer/facebook.svg" />
+            <img src="img/footer/facebook.svg" alt="페이스북 로고" />
           </a>
           <a href="https://twitter.com/?lang=ko" target="_blank">
-            <img src="img/footer/twitter.svg" />
+            <img src="img/footer/twitter.svg" alt="트위터 로고" />
           </a>
           <a href="https://www.youtube.com/" target="_blank">
-            <img src="img/footer/youtube.svg" />
+            <img src="img/footer/youtube.svg" alt="유튜브 로고" />
           </a>
           <a href="https://www.instagram.com/" target="_blank">
-            <img src="img/footer/instagram.svg" />
+            <img src="img/footer/instagram.svg" alt="인스타그램 로고" />
           </a>
         </div>
       </div>
