--- a/signin.html
+++ b/signin.html
@@ -20,18 +20,18 @@
       <form>
         <div class="input-wrap">
           <div class="sign-input">
-            <label for="email" class="sign-label">이메일</label>
-            <input type="email" id="email" class="input-text" />
+            <label class="sign-label" for="email">이메일</label>
+            <input class="input-text" id="email" type="email" />
           </div>
           <div class="sign-input password">
-            <label for="pwd" class="sign-label">비밀번호</label>
-            <input type="password" id="pwd" class="input-text" />
-            <button type="button" class="eye-btn">
+            <label class="sign-label" for="pwd">비밀번호</label>
+            <input class="input-text" id="pwd" type="password" />
+            <button class="eye-btn" type="button">
               <img src="img/signin/eye-off.svg" alt="eye-off" />
             </button>
           </div>
         </div>
-        <button type="button" class="signin-btn">로그인</button>
+        <button class="signin-btn" type="button">로그인</button>
       </form>
       <div class="sns-wrap">
         <p class="sns-text">소셜 로그인</p>
