--- a/signup.html
+++ b/signup.html
@@ -37,14 +37,14 @@
 </head>
 
 <body>
-  <div class="login__wrap">
-    <main class="login__body">
+  <div class="signin__wrap">
+    <main class="signin__body">
       <h1 class="title">
         <a href="/">
           <img src="img/logo/logo.svg" alt="linkbrary">
         </a>
       </h1>
-      <div class="login__sign d__flex__center">
+      <div class="signin__sign d__flex__center">
         <span>이미 회원이신가요?</span>
         <a href="/signin.html">로그인 하기</a>
       </div>
@@ -82,9 +82,9 @@
         </div>
       </form>
       <!-- sns 가입하기 -->
-      <div class="d__flex__btw login__another">
+      <div class="d__flex__btw signin__another">
         <span class="text__size__s">다른 방식으로 가입하기</span>
-        <div class="d__flex login__sns">
+        <div class="d__flex signin__sns">
           <a href="https://www.google.co.kr/?hl=ko" target="_blank" class="d__flex__center">
             <img src="img/icon/icon_google.png" alt="구글로그인">
           </a>
