--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,12 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
-  <script defer src="js/validation.js"></script>
+  <script defer src="js/signup.js"></script>
   <script defer src="js/password_toggle.js"></script>
 </head>
 
 <body>
-  <div class="signin__wrap">
+  <div class="signin__wrap signup__wrap">
     <main class="signin__body">
       <h1 class="title">
         <a href="/">
@@ -78,7 +78,7 @@
             </div>
             <p class="error__text">asdf</p>
           </div>
-          <button class="btn_sign btn__gradient__lg">회원가입</button>
+          <button class="btn_signup btn__gradient__lg" disabled>회원가입</button>
         </div>
       </form>
       <!-- sns 가입하기 -->
