--- a/signin.html
+++ b/signin.html
@@ -32,8 +32,7 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
-  <script defer type="module" src="js/signin.js"></script>
-  <script defer type="module" src="js/validation.js"></script>
+  <script defer src="js/signin.js"></script>
   <script defer src="js/password_toggle.js"></script>
 </head>
 
@@ -68,7 +67,7 @@
             </div>
             <p class="error__text"></p>
           </div>
-          <button class="btn_signin btn__gradient__lg">로그인</button>
+          <button class="btn_signin btn__gradient__lg" disabled>로그인</button>
         </div>
       </form>
       <!-- sns 로그인 -->
