fix: main-text 오류 해결

--- a/login.html
+++ b/login.html
@@ -2,13 +2,11 @@
 
 <html lang="ko">
 
-
-<title>Linkbrary - Login</title>
-
 <head>
+	<title>Linkbrary - Login</title>
 	<link href="css/reset.css" rel="stylesheet">
-	<link rel='stylesheet'
-		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
+	<link rel="stylesheet" as="style" crossorigin
+        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
 	<link href="css/auth.css" rel="stylesheet">
@@ -37,7 +35,7 @@
 	<div class="login-content">
 		<form class="auth__login-form" id="loginForm">
 			<div class="auth-route">
-				<a class="auth-route__home" href="index.html">
+				<a class="auth-route__home" href="/">
 					<img src="images/Linkbrary.svg" alt="Link-brary 로고">
 				</a>
 				<div class="auth-route__hyperlink">
