fix: viewport 설정

--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
 	<meta name="keywords" content="도서관, 책, 정보, 데이터베이스">
 	<meta name="author" content="SeungRyeolBaek">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Linkbrary" />
 	<meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요." />
 	<meta property="og:image" content="https://seungryeolbaek-sprint-weekly.netlify.app/images/library.png" />
