--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="" content="">
   <meta property="og:url" content="https://linkbrary0304.netlify.app/">
   <meta property="og:title" content="Linkbrary">
   <meta property="og:type" content="website">
@@ -17,6 +16,8 @@
   <link rel="stylesheet" href="/assets/CSS/mobile.css">
   <title>Linkbrary</title>
 </head>
+
+<!-- 종결 하기 <img /> -->
 <body>
   <nav class="nav-wrap">
     <div class="nav-inner">
