--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
-          <input type="email" class="sign-input" name="eamil"> 
+          <input type="email" class="sign-input" name="email"> 
         </div>
         <div class="sign-inner">
           <label for="password" class="sign-label">비밀번호</label>
