--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
-          <input type="email" class="sign-input" name="eamil">
+          <input type="email" class="sign-input" name="email">
         </div>
         <div class="sign-inner">
           <label for="pw" class="sign-label">비밀번호</label>
@@ -56,5 +56,7 @@
       </a>
     </div>
   </div>
+
+  <script type="mobile" src="/assets/js/login.js"></script>
 </body>
 </html>
