--- a/main.html
+++ b/main.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="static/img/Linkbrary.jpg" key="image" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요."
+    />
     <title>Linkbrary</title>
-    <link rel="stylesheet" href="main.style.css" />
+    <link rel="stylesheet" href="index.style.css" />
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
     <nav class="nav">
       <div class="nav__bar">
         <a href="main.html">
-          <img class="logo" src="./img/logo.svg" alt="logo" />
+          <img class="logo" src="img/logo.svg" alt="logo" />
         </a>
         <a class="login__link" href="signin.html">로그인</a>
       </div>
@@ -19,7 +25,7 @@
     <main>
       <section class="main">
         <h1 class="main__description">
-          <span class="main__description--highlight">세상의 모든 정보</span
+          <span class="main--gradient">세상의 모든 정보</span
           ><span
             >를<br />
             쉽게 저장하고 <br class="media__br" />관리해 보세요</span
@@ -29,7 +35,7 @@
           <a class="signup__link" href="signup.html">링크 추가하기</a>
         </div>
         <div class="main__img-section">
-          <img class="main__img" src="./img/main.png" alt="main" />
+          <img class="main__img" src="img/main.png" alt="main" />
         </div>
       </section>
       <section class="section">
@@ -47,12 +53,12 @@
               한 공간에 저장하세요.
             </div>
           </div>
-          <img class="section-img" src="./img/save.png" alt="save" />
+          <img class="section-img" src="img/save.png" alt="save" />
         </div>
       </section>
       <section class="section">
         <div class="section__content reverse">
-          <img class="section-img" src="./img/manage.png" alt="manage" />
+          <img class="section-img" src="img/manage.png" alt="manage" />
           <div class="description-section">
             <h2>
               링크를 폴더로<br />
@@ -78,12 +84,12 @@
               공유해보세요.
             </div>
           </div>
-          <img class="section-img" src="./img/share.png" alt="share" />
+          <img class="section-img" src="img/share.png" alt="share" />
         </div>
       </section>
       <section class="section">
         <div class="section__content reverse">
-          <img class="section-img" src="./img/search.png" alt="search" />
+          <img class="section-img" src="img/search.png" alt="search" />
           <div class="description-section">
             <h2>
               저장한 링크를<br />
@@ -105,16 +111,16 @@
         </div>
         <div class="footer__social">
           <a href="https://www.facebook.com/"
-            ><img src="./img/facebook.svg" alt="Facebook" name="Facebook"
+            ><img src="img/facebook.svg" alt="Facebook" name="Facebook"
           /></a>
           <a href="https://twitter.com/"
-            ><img src="./img/twitter.svg" alt="Twitter" name="Twitter"
+            ><img src="img/twitter.svg" alt="Twitter" name="Twitter"
           /></a>
           <a href="https://youtube.com">
-            <img src="./img/youtube.svg" alt="Youtube" name="Youtube"
+            <img src="img/youtube.svg" alt="Youtube" name="Youtube"
           /></a>
           <a href="https://instagram.com"
-            ><img src="./img/instagram.svg" alt="Instagram" name="instagram"
+            ><img src="img/instagram.svg" alt="Instagram" name="instagram"
           /></a>
         </div>
       </div>
