--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
       content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요."
     />
     <title>Linkbrary</title>
-    <link rel="stylesheet" href="index.style.css" />
+    <link rel="stylesheet" href="main.style.css" />
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
