이메일형식을 확인해서 에러메세지 나오게함

--- a/signin.html
+++ b/signin.html
@@ -23,9 +23,7 @@
           <div class="input-section">
             <div class="text">이메일<br /></div>
             <input id="email" class="user-input" type="email" name="email" />
-            <div id="email-errorText" class="text error">
-              이메일을 입력해주세요.
-            </div>
+            <div id="email-errorText" class="text error"></div>
           </div>
           <div class="input-section">
             <div class="text">비밀번호<br /></div>
