--- a/signup.html
+++ b/signup.html
@@ -29,14 +29,14 @@
           </label>
           <label>
             <h4>비밀번호</h4>
-            <div class="sign-password-input">
+            <div class="input-password">
               <input type="password">
               <img class="icon-eye" src="icon/eye-off.svg">
             </div>
           </label>
           <label>
             <h4>비밀번호 확인</h4>
-            <div class="sign-password-input">
+            <div class="input-password">
               <input type="password">
               <img class="icon-eye" src="icon/eye-off.svg">
             </div>
